<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalc</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edittext_amount_hint">Enter Amount</string>
    <string name="percent_10">10%</string>
    <string name="percent_15_btn">15%</string>
    <string name="percent_20_btn">20%</string>
    <string name="text_view_label">Tip is:</string>

</resources>
